2010-04-23  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] LayoutTests/fast/canvas/pointInPath.html passed, actually it failed
        https://bugs.webkit.org/show_bug.cgi?id=37276

        pointInPath.html passed because the expected.txt expect it fail, it is wrong.

        * platform/qt/fast/canvas/pointInPath-expected.txt: Removed.
2010-04-23  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] LayoutTests/fast/canvas/pointInPath.html passed, actually it failed
        https://bugs.webkit.org/show_bug.cgi?id=37276

        QPainterPath::contains doesn't count the point on the bound.

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::isPointOnPathBorder):
        (WebCore::Path::contains):

Canonical link: https://commits.webkit.org/49487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58207 268f45cc-cd09-0410-ab3c-d52691b4dbfc